# schalentier

./: .dockerignore  ASSESSMENT.md  Cargo.toml  Cross.toml  PLAN.md  PLAN_LINUX.md  PLAN_WINDOWS.md  README.md  TODO.md  build-musl.sh  install.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
registry/: README.md  packages.json
src/: archive.rs  bootstrap.rs  cli.rs  config.rs  detection.rs  dotfiles.rs  error.rs  gist.rs  lib.rs  logging.rs  main.rs  registry.rs  secrets.rs  shell.rs  state.rs  template.rs
src/provider/: binary.rs  brew.rs  cargo.rs  conda.rs  go.rs  mock.rs  mod.rs  system.rs  uv.rs
src/security/: cache.rs  mod.rs  osv.rs
tests/smoke/: Dockerfile  mock_gist_server.py  run.sh  run_smoke_tests.sh
