[package]
name = "schalentier"
version = "0.1.0"
edition = "2021"
description = "A cross-platform package and tool manager with configuration sync"
license = "MIT"
repository = "https://github.com/user/schalentier"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for downloads)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async utilities
async-trait = "0.1"
futures-util = "0.3"

# URL encoding
urlencoding = "2"

# Directories
dirs = "5"

# Terminal UI (Phase 6)
# indicatif = "0.17"
# inquire = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
