[package]
name = "schalentier"
version = "0.1.2"
edition = "2021"
description = "A cross-platform package and tool manager with configuration sync"
license = "MIT"
repository = "https://github.com/cosinusalpha/schalentier"
homepage = "https://github.com/cosinusalpha/schalentier"
keywords = ["cli", "package-manager", "dotfiles", "tools", "sync"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
	"img/*",
	"tests/*",
	".github/*",
	".vscode/*",
	"build-musl.sh",
	"Cross.toml",
	"Cargo.lock",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"

# HTTP client (for downloads) - using rustls with aws-lc-rs crypto
# Requires C compiler at build time, but produces static binary with no runtime deps
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "charset"] }

# Async utilities
async-trait = "0.1"
futures-util = "0.3"

# URL encoding
urlencoding = "2"

# Directories
dirs = "6"

# Archive extraction (pure Rust only - no C dependencies)
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
# Note: bzip2 and xz support removed to avoid C dependencies
# Most modern releases use .tar.gz or .zip anyway

# Tool detection
which = "8"

# Unix utilities
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Terminal UI (Phase 6)
indicatif = "0.18"
inquire = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
